# forest-fire-estimator

./: .gitattributes  .gitignore  README.md  environment.yml  forest-fire-estimator-modeling.ipynb  forest-fire-estimator-premodeling.ipynb  pyproject.toml  requirements.txt
.streamlit/: config.toml
serialization/dataframes/: metrics_result.pickle  regression_metrics.pickle
serialization/models/: adadelta_model.h5  adagrad_model.h5  adam_model.h5
serialization/models/regression_models/: adadelta_model.h5  adagrad_model.h5  adam_model.h5
serialization/utilities/: min_and_max.pickle  scaler_DC.pickle  scaler_DMC.pickle  scaler_FFMC.pickle  scaler_ISI.pickle  scaler_RH.pickle  scaler_area.pickle  scaler_month.pickle  scaler_rain.pickle  scaler_temp.pickle  scaler_wind.pickle
streamlit/: app.py
streamlit/pages/: classification.py  info.py  regression.py
streamlit/utilities/: helper.py
