[tool.poetry]
name = "forest-fire-estimator"
version = "0.1.0"
description = ""
authors = ["Dendi Handian <contact.dendi@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "2.6"
PyYAML = "^6.0"
pandas = "1.3.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
